<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".signUp.SignUpActivity">

    <include layout="@layout/toolbar"></include>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:text="@string/user_sign_up_name_text_label"
                    android:textColor="?attr/colorPrimaryDark"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/user_sign_up_dni_text_label"
                    android:textColor="?attr/colorPrimaryDark"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/user_sign_up_email_text_label"
                    android:textColor="?attr/colorPrimaryDark"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="45dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/user_sign_up_password_text_label"
                    android:textColor="?attr/colorPrimaryDark"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20dp">

                <EditText
                    android:id="@+id/user_sing_up_name_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="?attr/colorPrimaryDarkTrans"
                    android:ems="10"
                    android:gravity="left|center_vertical"
                    android:inputType="textPersonName"
                    android:padding="5dp"
                    android:textColor="@color/colorAccent"
                    tools:ignore="LabelFor" />

                <EditText
                    android:id="@+id/user_sign_up_dni_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="?attr/colorPrimaryDarkTrans"
                    android:ems="10"
                    android:gravity="left|center_vertical"
                    android:inputType="text"
                    android:padding="5dp"
                    android:textColor="@color/colorAccent"
                    tools:ignore="LabelFor" />

                <EditText
                    android:id="@+id/user_sign_up_email_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="?attr/colorPrimaryDarkTrans"
                    android:ems="10"
                    android:gravity="left|center_vertical"
                    android:inputType="textEmailAddress"
                    android:padding="5dp"
                    android:textColor="@color/colorAccent"
                    tools:ignore="LabelFor" />

                <EditText
                    android:id="@+id/user_sign_up_correct_email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="?attr/colorPrimaryDarkTrans"
                    android:ems="10"
                    android:gravity="left|center_vertical"
                    android:inputType="textEmailAddress"
                    android:padding="5dp"
                    android:textColor="?attr/colorAccent"
                    tools:ignore="LabelFor" />

                <EditText
                    android:id="@+id/user_sign_up_password_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="?attr/colorPrimaryDarkTrans"
                    android:ems="10"
                    android:gravity="left|center_vertical"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:textColor="?attr/colorAccent"
                    tools:ignore="LabelFor" />

                <EditText
                    android:id="@+id/user_sign_up_correct_password_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="?attr/colorPrimaryDarkTrans"
                    android:ems="10"
                    android:gravity="left|center_vertical"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:textColor="?attr/colorAccent"
                    tools:ignore="LabelFor" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="145dp" />

                <ImageView
                    android:id="@+id/user_sign_up_email_correction_icon_view"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:elevation="24dp"
                    android:scaleType="fitCenter"
                    android:visibility="invisible"
                    android:contentDescription="TODO" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="70dp" />

                <ImageView
                    android:id="@+id/user_sign_up_password_correction_icon_view"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:elevation="24dp"
                    android:scaleType="fitCenter"
                    android:visibility="invisible"
                    android:contentDescription="TODO" />
            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <ProgressBar
            android:id="@+id/sign_up_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:indeterminateTint="?attr/colorPrimaryDark"
            android:visibility="invisible" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/sign_up_accept_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="?attr/colorPrimaryDark"
            android:text="@string/sign_up_accept_button_text_label"
            android:textColor="?attr/colorPrimary" />
    </LinearLayout>

</LinearLayout>