...

    <!-- SignIn View -->
    <string name="sign_in_user_text_label">Usuario:</string>
    <string name="sign_in_password_text_label">Password:</string>
    <string name="activity_label">Iniciar Sesión</string>
    <string name="password_forget_text_label">¿Has olvidado la contraseña?</string>
    <string name="sign_in_button_text_label">Entrar</string>
    <string name="not_sign_up_text_view">¿No eres usuario?</string>
    <string name="sign_up_button_text_label">Regístrate</string>
    <string name="ask_date_button_text_label">Pedir Cita</string>

    <!-- SignUp View -->
    <string name="user_sign_up_name_text_label">Nombre:</string>
    <string name="user_sign_up_dni_text_label">DNI:</string>
    <string name="user_sign_up_email_text_label">Email:</string>
    <string name="user_sign_up_password_text_label">Password:</string>
    <string name="sign_up_accept_button_text_label">Aceptar</string>

    <!-- SignUpConfirmation View -->
    <string name="sing_up_confirmation_welcome_text_label">Bienvenido a Zonget</string>
    <string name="sign_up_confirmation_confirmed_email_text_label">Hemos enviado a su correo un email de verificación.</string>

    <!-- UserButtonsMenuList View -->
...
    <string name="insert_birthday_text_label">Fecha de nacimiento:</string>
    <string name="pet_name">Nombre Mascota</string>
    <string name="pet_species">Especie</string>
    <string name="pet_breed">Raza</string>
    <string name="edit_pet_tittle">Editar animal</string>
    <string name="add_pet_tittle">Nuevo Animal</string>
    <string name="ID_Number">XXXXXXXXX</string>
    <string name="date_model">dd/mm/aaaa</string>

    <!--Dialogs-->
    <string name="sureToEliminatePet">¿Está seguro de eliminar esta mascota de la lista?</string>
    <string name="accept_button">Aceptar</string>
    <string name="cancel_button">Cancelar</string>
...
