...
                android:gravity="center"
                android:text="@string/sign_in_user_text_label"
                android:textColor="?attr/colorPrimary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/account_name_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
...
                android:layout_height="44dp"
                android:layout_marginLeft="10dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="?attr/colorPrimary">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/account_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColor="?attr/colorAccent" />
...

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:backgroundTint="?attr/colorPrimary"
            android:text="@string/sign_in_button_text_label"
            android:textColor="?attr/colorPrimaryDark" />
...
